<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>my_project</groupId>
  <artifactId>my_project</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>war</packaging>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>24</release>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.2.3</version>
      </plugin>
    </plugins>
  </build>
  <dependencies>
   	
  	<dependency>
  		<groupId>jakarta.servlet</groupId>
  		<artifactId>jakarta.servlet-api</artifactId>
  		<version>6.1.0</version>
  		<scope>provided</scope>
  	</dependency>
  	
  	<dependency>
  		<groupId>org.glassfish.web</groupId>
  		<artifactId>jakarta.servlet.jsp.jstl</artifactId>
  		<version>3.0.1</version>
  		</dependency>
  		
<dependency>
    <groupId>jakarta.servlet.jsp.jstl</groupId>
    <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
    <version>3.0.0</version>
</dependency>
 <dependency>
    <groupId>com.mysql</groupId>
    <artifactId>mysql-connector-j</artifactId>
    <version>8.0.33</version> 
</dependency>

  </dependencies>
</project>